# EmployeeManagementSystem

./: .README  .gitignore   README.md  pyproject.toml  test.db
app/: main.py
app/database/: employee_db.py  employee_respository.py
app/exceptions/: employee_exceptions.py
app/models/: employee_models.py
app/service/: public_holiday_notification_service.py
app/utils/: email_validators.py  time_utils.py
